[package]
name = "driver"
version = "0.1.0"
edition = "2024"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[dependencies]
wdk = "0.3.0"
wdk-alloc = "0.3.0"
wdk-panic = "0.3.0"
wdk-sys = "0.3.0"
rmtrd = { path = "../lib" }
ksync = { git="https://github.com/lzty/ksync.git", tag="v0.1.3" }

[features]
nightly = ["wdk/nightly", "wdk-sys/nightly"]

[build-dependencies]
wdk-build = "0.3.0"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
debug = true
overflow-checks = false

[profile.release]
panic = "abort"
lto = true
overflow-checks = false