[package]
name = "rmtrd"
version = "0.1.0"
edition = "2024"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[dependencies]
wdk = "0.3.0"
wdk-alloc = "0.3.0"
wdk-panic = "0.3.0"
wdk-sys = "0.3.0"
ksync = { git="https://github.com/lzty/ksync.git", tag="v0.1.3" }

[features]
nightly = ["wdk/nightly", "wdk-sys/nightly"]